--- a/services.html
+++ b/services.html
@@ -9,6 +9,13 @@
 <body>
     <!-- Header Section -->
     <header>
+    
+    <!-- Hamburger Menu Button -->
+    <div class="hamburger">
+        <div></div>
+        <div></div>
+        <div></div>
+    </div>
     <div class="container">
         <!-- Logo with image and text -->
         <h1 class="logo">
@@ -88,5 +95,6 @@
     <footer>
         <p>&copy; 2024 Earn to Learn | All Rights Reserved</p>
     </footer>
+<script src="hamburger_menu.js"></script>
 </body>
 </html>
