--- a/services.html
+++ b/services.html
@@ -11,7 +11,14 @@
     <header>
     
     <!-- Hamburger Menu Button -->
-    <div class="hamburger">
+    
+    <!-- Hamburger Menu Button -->
+    <div class="hamburger" style="position: absolute; right: 20px; top: 20px;">
+        <div></div>
+        <div></div>
+        <div></div>
+    </div>
+
         <div></div>
         <div></div>
         <div></div>
