--- a/services.html
+++ b/services.html
@@ -13,7 +13,14 @@
     <!-- Hamburger Menu Button -->
     
     <!-- Hamburger Menu Button -->
-    <div class="hamburger" style="position: absolute; right: 20px; top: 20px;">
+    
+    <!-- Hamburger Menu Button -->
+    <div class="hamburger" style="display: flex; justify-content: flex-end; align-items: center;">
+        <div></div>
+        <div></div>
+        <div></div>
+    </div>
+
         <div></div>
         <div></div>
         <div></div>
