--- a/index.html
+++ b/index.html
@@ -13,6 +13,13 @@
 <body>
     <!-- Header Section -->
     <header>
+    
+    <!-- Hamburger Menu Button -->
+    <div class="hamburger" style="display: flex; justify-content: flex-end; align-items: center; position: relative; margin-left: auto;">
+        <div></div>
+        <div></div>
+        <div></div>
+    </div>
         <div class="container">
             <!-- Logo with Image -->
             <div class="logo">
@@ -116,6 +123,7 @@
     <footer>
         <p>&copy; 2024 Earn to Learn | All Rights Reserved</p>
     </footer>
+<script src="hamburger_menu.js"></script>
 </body>
 
 </html>
