--- a/services.html
+++ b/services.html
@@ -15,7 +15,7 @@
     <!-- Hamburger Menu Button -->
     
     <!-- Hamburger Menu Button -->
-    <div class="hamburger" style="display: flex; justify-content: flex-end; align-items: center;">
+        <!-- Hamburger Menu Button --> style="display: flex; justify-content: flex-end; align-items: center;">
         <div></div>
         <div></div>
         <div></div>
