--- a/index.html
+++ b/index.html
@@ -15,7 +15,12 @@
     <header>
     
     <!-- Hamburger Menu Button -->
-        <!-- Hamburger Menu Button --> style="display: flex; justify-content: flex-end; align-items: center; position: relative; margin-left: auto;">
+    <!-- Hamburger Menu Button -->
+    <div class="hamburger" style="display: flex; justify-content: flex-end; align-items: center; position: absolute; right: 20px; top: 20px;">
+        <div></div>
+        <div></div>
+        <div></div>
+    </div> justify-content: flex-end; align-items: center; position: relative; margin-left: auto;">
         <div></div>
         <div></div>
         <div></div>
