--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <div></div>
         <div></div>
         <div></div>
-    </div> justify-content: flex-end; align-items: center; position: relative; margin-left: auto;">
+    </div> style="display: flex; justify-content: flex-end; align-items: center; position: relative; margin-left: auto;">
         <div></div>
         <div></div>
         <div></div>
