--- a/services.html
+++ b/services.html
@@ -20,7 +20,7 @@
         <div></div>
         <div></div>
         <div></div>
-    </div> justify-content: flex-end; align-items: center;">
+    </div> style="display: flex; justify-content: flex-end; align-items: center;">
         <div></div>
         <div></div>
         <div></div>
