--- a/services.html
+++ b/services.html
@@ -16,11 +16,16 @@
     
     <!-- Hamburger Menu Button -->
     <!-- Hamburger Menu Button -->
+    <!-- Hamburger Menu Button -->
     <div class="hamburger" style="display: flex; justify-content: flex-end; align-items: center; position: absolute; right: 20px; top: 20px;">
         <div></div>
         <div></div>
         <div></div>
-    </div> style="display: flex; justify-content: flex-end; align-items: center;">
+    </div> style="display: flex; justify-content: flex-end; align-items: center; position: absolute; right: 20px; top: 20px;">
+        <div></div>
+        <div></div>
+        <div></div>
+    </div> style="display: flex; 
         <div></div>
         <div></div>
         <div></div>
