--- a/services.html
+++ b/services.html
@@ -22,15 +22,15 @@
     <div></div>
     <div></div>
     <div></div>
-</div> style="display: flex; justify-content: flex-end; align-items: center; position: absolute; right: 20px; top: 20px;">
+</div>
         <div></div>
         <div></div>
         <div></div>
-    </div> style="display: flex; justify-content: flex-end; align-items: center; position: absolute; right: 20px; top: 20px;">
+    </div>
         <div></div>
         <div></div>
         <div></div>
-    </div> style="display: flex; 
+    </div>
         <div></div>
         <div></div>
         <div></div>
