Update for links

--- a/contact.html
+++ b/contact.html
@@ -9,23 +9,21 @@
 <body>
     <!-- Header Section -->
     <header>
-    <div class="container">
-        <!-- Logo with image and text -->
-        <h1 class="logo">
-            <img src="https://i.imgur.com/DWX2K69.png" alt="Earn to Learn Logo" class="logo-img">
-            Earn to Learn
-        </h1>
-        
-        <!-- Navigation Menu -->
-        <nav>
-            <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="services.html">Services</a></li>
-                <li><a href="contact.html">Contact</a></li>
-            </ul>
-        </nav>
-    </div>
-</header>
+        <div class="container">
+            <div class="logo">
+                <img src="https://i.imgur.com/DWX2K69.png" alt="Earn to Learn Logo" class="logo-img">
+                Earn to Learn
+            </div>
+            <nav>
+                <ul>
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="services.html">Services</a></li>
+                    <li><a href="contact.html">Contact</a></li>
+                </ul>
+            </nav>
+        </div>
+    </header>
+    
 
 
     <!-- Contact Section -->
