--- a/services.html
+++ b/services.html
@@ -38,49 +38,49 @@
             <div class="service-item">
                 <h3>Lawn Care</h3>
                 <p>Professional lawn mowing, trimming, and maintenance to keep your yard looking great.</p>
-                <a href="https://your-fresha-link.com/lawn-care" class="btn">Book Lawn Care</a>
+                <a href="https://www.fresha.com/book-now/earn-to-learn-xnnq7m83/services?lid=1474952&eid=3332873&oiid=sv%3A19685131&share&pId=1400712" class="btn">Book Lawn Care</a>
             </div>
 
             <!-- Window Cleaning -->
             <div class="service-item">
                 <h3>Window Cleaning</h3>
                 <p>Get crystal clear windows inside and out with our expert window cleaning services.</p>
-                <a href="https://your-fresha-link.com/window-cleaning" class="btn">Book Window Cleaning</a>
+                <a href="https://www.fresha.com/book-now/earn-to-learn-xnnq7m83/services?lid=1474952&eid=3332873&oiid=sv%3A19684246&share&pId=1400712" class="btn">Book Window Cleaning</a>
             </div>
 
             <!-- Auto Detailing -->
             <div class="service-item">
                 <h3>Auto Detailing</h3>
                 <p>Restore your vehicle's shine with our complete interior and exterior auto detailing.</p>
-                <a href="https://your-fresha-link.com/auto-detailing" class="btn">Book Auto Detailing</a>
+                <a href="https://www.fresha.com/book-now/earn-to-learn-xnnq7m83/services?lid=1474952&eid=3332873&oiid=sv%3A19685092&share&pId=1400712" class="btn">Book Auto Detailing</a>
             </div>
 
             <!-- Dog Watching -->
             <div class="service-item">
                 <h3>Dog Watching</h3>
                 <p>We care for your pets while you're away. Enjoy peace of mind knowing your dog is in good hands.</p>
-                <a href="https://your-fresha-link.com/dog-watching" class="btn">Book Dog Watching</a>
+                <a href="https://www.fresha.com/book-now/earn-to-learn-xnnq7m83/services?lid=1474952&eid=3332873&oiid=sv%3A19684942&share&pId=1400712" class="btn">Book Dog Watching</a>
             </div>
 
             <!-- Dog Walking -->
             <div class="service-item">
                 <h3>Dog Walking</h3>
                 <p>Take your dog for a walk and get them some exercise with our dog walking services.</p>
-                <a href="https://your-fresha-link.com/dog-walking" class="btn">Book Dog Walking</a>
-            </div>
-
-            <!-- House Sitting -->
-            <div class="service-item">
-                <h3>House Sitting</h3>
-                <p>We’ll take care of your home while you're away. Enjoy peace of mind with our reliable house sitting services.</p>
-                <a href="https://your-fresha-link.com/house-sitting" class="btn">Book House Sitting</a>
+                <a href="https://www.fresha.com/book-now/earn-to-learn-xnnq7m83/services?lid=1474952&eid=3332873&oiid=sv%3A19684951&share&pId=1400712" class="btn">Book Dog Walking</a>
             </div>
 
             <!-- Customized Services -->
             <div class="service-item">
                 <h3>Customized Services</h3>
                 <p>Need something else? We can tailor our services to meet your unique needs.</p>
-                <a href="https://your-fresha-link.com/customized-services" class="btn">Book Customized Service</a>
+                <a href="https://www.fresha.com/book-now/earn-to-learn-xnnq7m83/services?lid=1474952&eid=3332873&oiid=sv%3A19672754&share&pId=1400712" class="btn">Book Customized Service</a>
+            </div>
+
+            <!-- Other -->
+            <div class="service-item">
+                <h3>Other</h3>
+                <p>Is there a service we haven't listed? Click the button below to see if it's on our booking platform and if not, request a customized service above!</p>
+                <a href="https://www.fresha.com/a/earn-to-learn-calgary-nb-nolan-hill-dr-nolanfield-ln-nw-xd1rorgj/booking?menu=true&pId=1400712&dppub=true&employeeId=3332873" class="btn">Other Services</a>
             </div>
         </div>
     </section>
