--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <div class="container">
             <!-- Logo with Image -->
             <div class="logo">
-                <img src="https://i.imgur.com/DWX2K69.png" alt="Earn to Learn Logo" class="logo-img">
+                <img src="images/e2llogo.png" alt="Earn to Learn Logo" class="logo-img">
                 Earn to Learn
             </div>
             <nav>
@@ -73,12 +73,12 @@
             <h2>Payment Methods</h2>
             <div class="payment-grid">
                 <article class="payment-item">
-                    <img src="https://i.imgur.com/n8gydqs.png" alt="Cash" class="payment-icon">
+                    <img src="images/cash.png" alt="Cash" class="payment-icon">
                     <h3>Cash</h3>
                     <p>We accept cash for all services. Pay on completion of the job.</p>
                 </article>
                 <article class="payment-item">
-                    <img src="https://static.wixstatic.com/media/e8c4bf_0f09743003824f24921178175cb59ed9~mv2.png/v1/fill/w_420,h_525,al_c,lg_1,q_85,enc_auto/interac.png" alt="Interac e-Transfer" class="payment-icon">
+                    <img src="images/interac.webp" alt="Interac e-Transfer" class="payment-icon">
                     <h3>Interac e-Transfer</h3>
                     <p>Send an Interac e-transfer directly from your bank account for a smooth transaction.</p>
                 </article>
