--- a/services.html
+++ b/services.html
@@ -65,7 +65,7 @@
             <!-- Dog Walking -->
             <div class="service-item">
                 <h3>Dog Walking</h3>
-                <p>Take your dog for a walk and get them some exercise with our dog walking services.</p>
+                <p>We take your dog for a walk and get them some exercise with our dog walking services.</p>
                 <a href="https://www.fresha.com/book-now/earn-to-learn-xnnq7m83/services?lid=1474952&eid=3332873&oiid=sv%3A19684951&share&pId=1400712" class="btn">Book Dog Walking</a>
             </div>
 
