--- a/contact.html
+++ b/contact.html
@@ -39,12 +39,12 @@
 
             <!-- Contact Details Section -->
             <div class="contact-details">
-                <h3>Other Ways to Reach Us</h3>
-                <p>If you prefer, you can contact us via:</p>
+               
                 <ul>
-                    <li><strong>Email:</strong> earntolearnco@gmail.com</li>
-                    <li><strong>Phone:</strong> (587) 889-1333</li>
-                </ul>
+                    <li><strong>Email:</strong> <a href="mailto:earntolearnco@gmail.com" class="email-phone-link">earntolearnco@gmail.com</a></li>
+                    <li><strong>Phone:</strong> <a href="tel:+15878891333" class="email-phone-link">(587) 889-1333</a></li>
+                  </ul>
+                  
             </div>
         </div>
     </section>
