--- a/index.html
+++ b/index.html
@@ -52,16 +52,16 @@
             <h2>Our Featured Services</h2>
             <div class="services-grid">
                 <article class="service-item">
-                    <h3>Lawn Care</h3>
-                    <p>Keep your yard lush and tidy with our expert lawn mowing, edging, and care services.</p>
+                    <h3>Snow Removal</h3>
+                    <p>Our team clears your driveway and sidewalk, so you can stay warm and worry-free during winter weather.</p>
                 </article>
                 <article class="service-item">
-                    <h3>Window Cleaning</h3>
-                    <p>Professional interior and exterior window cleaning to enhance the appearance of your home or office.</p>
+                    <h3>Dog walking</h3>
+                    <p>Our dog walking service provides exercise, attention, and companionship for your pet when you need it most.</p>
                 </article>
                 <article class="service-item">
                     <h3>Car Detailing</h3>
-                    <p>Interior and exterior cleaning to restore your car’s shine and keep it looking brand new.</p>
+                    <p>Interior and exterior cleaning to restore your cars shine and keep it looking brand new.</p>
                 </article>
             </div>
         </div>
