--- a/services.html
+++ b/services.html
@@ -74,7 +74,7 @@
             <!-- Customized Services -->
             <div class="service-item">
                 <h3>Customized Services</h3>
-                <p>Need something else? We can tailor our services to meet your unique needs.</p>
+                <p>Need something else? We can tailor our services to meet your unique needs!</p>
                 <a href="https://www.fresha.com/book-now/earn-to-learn-xnnq7m83/services?lid=1474952&eid=3332873&oiid=sv%3A19672754&share&pId=1400712" class="btn">Book Customized Service</a>
             </div>
 
