--- a/services.html
+++ b/services.html
@@ -44,7 +44,7 @@
             <!-- Snow Removal -->
             <div class="service-item">
                 <h3>Window Cleaning</h3>
-                <p>Get our team to clear your driveway and sidewalk, so you can stay warm and worry-free during winter weather.
+                <p>Get our team to clear your driveway and sidewalk, so you can stay warm and worry free during winter weather.
 
                 </p>
                 <a href="https://www.fresha.com/book-now/earn-to-learn-xnnq7m83/services?lid=1474952&eid=3332873&oiid=sv%3A19709495&share&pId=1400712" class="btn">Book Window Cleaning</a>
