--- a/services.html
+++ b/services.html
@@ -68,21 +68,21 @@
             <div class="service-item">
                 <h3>Dog Walking</h3>
                 <p>We take your dog for a walk and get them some exercise with our dog walking services.</p>
-                <a href="https://www.fresha.com/book-now/earn-to-learn-xnnq7m83/services?lid=1474952&eid=3332873&oiid=sv%3A19684951&share&pId=1400712" class="btn">Book Dog Walking</a>
+                <a href="https://www.fresha.com/book-now/earn-to-learn-xnnq7m83/services?lid=1474952&eid=3332873&oiid=sv%3A19684950&share&pId=1400712" class="btn">Book Dog Walking</a>
             </div>
 
             <!-- Customized Services -->
             <div class="service-item">
                 <h3>Customized Services</h3>
                 <p>Need something else? We can tailor our services to meet your unique needs!</p>
-                <a href="https://www.fresha.com/book-now/earn-to-learn-xnnq7m83/services?lid=1474952&eid=3332873&oiid=sv%3A19672754&share&pId=1400712" class="btn">Book Customized Service</a>
+                <a href="https://www.fresha.com/book-now/earn-to-learn-xnnq7m83/services?lid=1474952&eid=3332873&oiid=sv%3A19684950&share&pId=1400712" class="btn">Book Customized Service</a>
             </div>
 
             <!-- Other -->
             <div class="service-item">
                 <h3>Other</h3>
                 <p>Is there a service we haven't listed? Click the button below to see if it's on our booking platform and if not, request a customized service above!</p>
-                <a href="https://www.fresha.com/a/earn-to-learn-calgary-nb-nolan-hill-dr-nolanfield-ln-nw-xd1rorgj/booking?menu=true&pId=1400712&dppub=true&employeeId=3332873" class="btn">Other Services</a>
+                <a href="https://www.fresha.com/book-now/earn-to-learn-xnnq7m83/services?lid=1474952&eid=3332873&share&pId=1400712" class="btn">Other Services</a>
             </div>
         </div>
     </section>
